sophons/apps/seaweedfs/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwardauth-authelia
  namespace: weed-system
spec:
  forwardAuth:
    address: "http://authelia.authelia.svc.cluster.local/api/authz/forward-auth"
    trustForwardHeader: true
    authResponseHeaders:
      - "Remote-User"
      - "Remote-Name"
      - "Remote-Email"
      - "Remote-Groups"
