sophons/apps/seaweedfs/deployment.yaml
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/refs/heads/master/v1.35.2/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weedfs-filer-config-reloader
  namespace: weed-system
  labels:
    app.kubernetes.io/weedname: seaweedfs
    app.kubernetes.io/instance: weedfs
    app.kubernetes.io/component: filer-config-reloader
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/weedname: seaweedfs
      app.kubernetes.io/instance: weedfs
      app.kubernetes.io/component: filer-config-reloader

  template:
    metadata:
      labels:
        app.kubernetes.io/weedname: seaweedfs
        app.kubernetes.io/instance: weedfs
        app.kubernetes.io/component: filer-config-reloader

    spec:
      tolerations:
        - operator: Exists

      volumes:
        - name: filer-config
          configMap:
            name: weed-filer

      containers:
        - name: config-reloader
          image: docker.io/library/alpine:edge
          imagePullPolicy: Always

          command:
            - sh
            - -c
            - |
              [...]
          securityContext:
            privileged: false
            runAsNonRoot: false
            runAsUser: 0
            runAsGroup: 0
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]

          volumeMounts:
            - name: filer-config
              mountPath: /etc/seaweedfs
              readOnly: true

          resources:
            requests:
              memory: 16Mi
            limits:
              memory: 64Mi
