sophons/apps/seaweedfs/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weedfs-admin
  namespace: weed-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "SeaweedFS S3-compatible storage admin"
    gethomepage.dev/icon: seaweedfs.svg
    gethomepage.dev/name: WeedFS
    gethomepage.dev/app: seaweedfs
    gethomepage.dev/group: Storage
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - weed.sophons.cloud

  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: forwardauth-authelia
      backendRefs:
        - name: weedfs-seaweedfs-admin
          port: 23646
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weedfs-s3
  namespace: weed-system
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - s3-weed.sophons.cloud
    - s3-weed.sphns.run
    - ps3-weed.sphns.run

  rules:
    - backendRefs:
        - name: weedfs-s3
          port: 8333
        # - group: traefik.io
        #   kind: TraefikService
        #   name: weedfs-s3
